<resources>
    <string name="help_dir">html</string>
    <string name="app_name">Intercomm</string>
    <string name="title_freq">Freq</string>
    <string name="title_chan">Channel</string>
    <string name="title_chat">Chat</string>
    <string name="title_sets">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="freq_next">Next Freq</string>
    <string name="freq_prew">Prev Freq</string>
    <string name="freq">freq</string>
    <string name="action_quit">Quit</string>
    <string name="nick"><![CDATA[Nick >]]></string>
    <string name="message">Message</string>
    <string name="search">Search …</string>
    <string name="power">Power</string>
    <string name="power_disabled">Module Power OFF</string>
    <string name="power_enabled">Module Power ON</string>
    <string name="nick_lable">Nick name in chat</string>
    <string name="set_min">Minimal Frequency</string>
    <string name="set_max">Maximal Frequency</string>
    <string name="step_label">Step</string>
    <string name="clear_history">Clear History</string>
    <string name="share_gps">Share GPS</string>
    <string name="not_send"> (Not Sended)</string>
    <string name="sound" >sound</string>
    <string name="ctcss_label" translatable="false">CTCSS: </string>
    <string name="sq_label">SQ</string>
    <string name="freq_def" translatable="false">000.00000</string>
    <string name="name">Channel name</string>
    <string name="rxfreq_label">Recive MHz</string>
    <string name="txfreq_label">Transm MHz</string>
    <string name="txctcss_label">TX Tone</string>
    <string name="rxctcss_label">RX Tone</string>
    <string name="power_enabling">Please wait while Activating!!!</string>
    <string name="non_runbo">Not Runbo X5 phone, trying other.</string>
    <string name="about_text"><![CDATA[Developed by NeiroN<br/> link to source code LGPL<br/> https://github.com/NeiroNx/Intercomm <br/> Email: neiron.nxn@gmail.com <br/>Accept donations on https://money.yandex.ru/embed/shop.xml?account=410012273336245&quickpay=shop&payment-type-choice=on&writer=seller&targets=Пожертвования&default-sum=30&button-text=04]]></string>
    <string name="about">About</string>
    <string name="scan">Scan</string>
    <string name="imp_csv">Import from CSV</string>
    <string name="exp_csv">Export to CSV</string>
    <string name="ch_add_help">Add channel</string>
    <string name="ch_add">Add</string>
    <string name="ch_apply">Apply</string>
    <string name="ch_search_help">Search channel</string>
    <string name="ch_prew_help">Prewius channel</string>
    <string name="ch_next_help">Next channel</string>
    <string name="ch_src_help">Sound source</string>
    <string name="channels_std" translatable="false">PMR 1,446.00625,446.00625,0,0,5,true,2|PMR 2,446.01875,446.01875,0,0,5,true,2|PMR 3,446.03125,446.03125,0,0,5,true,2|PMR 4,446.04375,446.04375,0,0,5,true,2|PMR 5,446.05625,446.05625,0,0,5,true,2|PMR 6,446.06875,446.06875,0,0,5,true,2|PMR 7,446.08125,446.08125,0,0,5,true,2|PMR 8,446.09375,446.09375,0,0,5,true,2|LPD 01,433.075,433.075,0,0,5,true,3|LPD 02,433.1,433.1,0,0,5,true,3|LPD 03,433.125,433.125,0,0,5,true,3|LPD 04,433.15,433.15,0,0,5,true,3|LPD 05,433.175,433.175,0,0,5,true,3|LPD 06,433.2,433.2,0,0,5,true,3|LPD 07,433.225,433.225,0,0,5,true,3|LPD 08,433.25,433.25,0,0,5,true,3|LPD 09,433.275,433.275,0,0,5,true,3|LPD 10,433.3,433.3,0,0,5,true,3|LPD 11,433.325,433.325,0,0,5,true,3|LPD 12,433.35,433.35,0,0,5,true,3|LPD 13,433.375,433.375,0,0,5,true,3|LPD 14,433.4,433.4,0,0,5,true,3|LPD 15,433.425,433.425,0,0,5,true,3|LPD 16,433.45,433.45,0,0,5,true,3|LPD 17,433.475,433.475,0,0,5,true,3|LPD 18,433.5,433.5,0,0,5,true,3|LPD 19,433.525,433.525,0,0,5,true,3|LPD 20,433.55,433.55,0,0,5,true,3|LPD 21,433.575,433.575,0,0,5,true,3|LPD 22,433.6,433.6,0,0,5,true,3|LPD 23,433.625,433.625,0,0,5,true,3|LPD 24,433.65,433.65,0,0,5,true,3|LPD 25,433.675,433.675,0,0,5,true,3|LPD 26,433.7,433.7,0,0,5,true,3|LPD 27,433.725,433.725,0,0,5,true,3|LPD 28,433.75,433.75,0,0,5,true,3|LPD 29,433.775,433.775,0,0,5,true,3|LPD 30,433.8,433.8,0,0,5,true,3|LPD 31,433.825,433.825,0,0,5,true,3|LPD 32,433.85,433.85,0,0,5,true,3|LPD 33,433.875,433.875,0,0,5,true,3|LPD 34,433.9,433.9,0,0,5,true,3|LPD 35,433.925,433.925,0,0,5,true,3|LPD 36,433.95,433.95,0,0,5,true,3|LPD 37,433.975,433.975,0,0,5,true,3|LPD 38,434,434,0,0,5,true,3|LPD 39,434.025,434.025,0,0,5,true,3|LPD 40,434.05,434.05,0,0,5,true,3|LPD 41,434.075,434.075,0,0,5,true,3|LPD 42,434.1,434.1,0,0,5,true,3|LPD 43,434.125,434.125,0,0,5,true,3|LPD 44,434.15,434.15,0,0,5,true,3|LPD 45,434.175,434.175,0,0,5,true,3|LPD 46,434.2,434.2,0,0,5,true,3|LPD 47,434.225,434.225,0,0,5,true,3|LPD 48,434.25,434.25,0,0,5,true,3|LPD 49,434.275,434.275,0,0,5,true,3|LPD 50,434.3,434.3,0,0,5,true,3|LPD 51,434.325,434.325,0,0,5,true,3|LPD 52,434.35,434.35,0,0,5,true,3|LPD 53,434.375,434.375,0,0,5,true,3|LPD 54,434.4,434.4,0,0,5,true,3|LPD 55,434.425,434.425,0,0,5,true,3|LPD 56,434.45,434.45,0,0,5,true,3|LPD 57,434.475,434.475,0,0,5,true,3|LPD 58,434.5,434.5,0,0,5,true,3|LPD 59,434.525,434.525,0,0,5,true,3|LPD 60,434.55,434.55,0,0,5,true,3|LPD 61,434.575,434.575,0,0,5,true,3|LPD 62,434.6,434.6,0,0,5,true,3|LPD 63,434.625,434.625,0,0,5,true,3|LPD 64,434.65,434.65,0,0,5,true,3|LPD 65,434.675,434.675,0,0,5,true,3|LPD 66,434.7,434.7,0,0,5,true,3|LPD 67,434.725,434.725,0,0,5,true,3|LPD 68,434.75,434.75,0,0,5,true,3|LPD 69,434.775,434.775,0,0,5,true,3|FRS 1,462.5625,462.5625,0,0,5,true,4|FRS 2,462.5875,462.5875,0,0,5,true,4|FRS 3,462.6125,462.6125,0,0,5,true,4|FRS 4,462.6375,462.6375,0,0,5,true,4|FRS 5,462.6625,462.6625,0,0,5,true,4|FRS 6,462.6875,462.6875,0,0,5,true,4|FRS 7,462.7125,462.7125,0,0,5,true,4|FRS 8,467.5625,467.5625,0,0,5,true,4|FRS 9,467.5875,467.5875,0,0,5,true,4|FRS 10,467.6125,467.6125,0,0,5,true,4|FRS 11,467.6375,467.6375,0,0,5,true,4|FRS 12,467.6625,467.6625,0,0,5,true,4|FRS 13,467.6875,467.6875,0,0,5,true,4|FRS 14,467.7125,467.7125,0,0,5,true,4|GMRS 1,462.550,462.550,0,0,5,true,5|GMRS 2,462.575,462.575,0,0,5,true,5|GMRS 3,462.600,462.600,0,0,5,true,5|GMRS 4,462.625,462.625,0,0,5,true,5|GMRS 5,462.650,462.650,0,0,5,true,5|GMRS 6,462.675,462.675,0,0,5,true,5|GMRS 7,462.700,462.700,0,0,5,true,5|GMRS 8,462.725,462.725,0,0,5,true,5|GMRS 9,467.550,467.550,0,0,5,true,5|GMRS 10,467.575,467.575,0,0,5,true,5|GMRS 11,467.600,467.600,0,0,5,true,5|GMRS 12,467.625,467.625,0,0,5,true,5|GMRS 13,467.650,467.650,0,0,5,true,5|GMRS 14,467.675,467.675,0,0,5,true,5|GMRS 15,467.700,467.700,0,0,5,true,5|GMRS 16,467.725,467.725,0,0,5,true,5</string>
    <string name="no_data">N/D</string>
    <string name="clear_channels">Reset Channels</string>
    <string name="scan_stopped">Scaning has stopped</string>
    <string name="ch_del">Delete</string>
    <string name="ver_label">Version:</string>
    <string name="no_func">No function</string>
    <string name="file_label">Select file</string>
    <string name="delete_all">Delete all</string>
    <string name="ch_imported" formatted="false">Imported %d channel(s)\n From %s</string>
    <string name="vibro_label">Vibration</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="sos_set">SOS Button set</string>
    <string name="offset_label">TX Offset</string>
    <string name="change_theme">Change Theme</string>
    <string name="groups_list">All,Favorite,PMR,LPD,FRS,GMRS</string>
    <string name="group_label">Group</string>
    <string name="filter_label">Filter</string>
    <string name="block">Block</string>
    <string name="check_all">Select all</string>
    <string name="invert">Invert selection</string>
    <string name="gpsmsg" formatted="false"><![CDATA[<div>%s Latitude:%.6f, Longitude:%.6f <a href=\"geo:%s,%s?z=16\">View MAP</a></div>]]></string>
    <string name="smiles">Smiles</string>
    <string name="send">Send</string>
    <string name="change_name_to" formatted="false"><![CDATA[<i><b>%s</b> has change nick to <b>%s</b></i>]]></string>
    <string name="scan_ct">Scan tones</string>
    <string name="full_mode">Full mode</string>
    <string name="mic_volume">Mic Volume</string>
    <string name="scram_label">Scrambling Level</string>
    <string name="tot">TOT</string>
    <string name="vox">VOX</string>
    <string name="port">COM Port</string>
    <string name="num_1" translatable="false">1</string>
    <string name="num_2" translatable="false">2</string>
    <string name="num_3" translatable="false">3</string>
    <string name="del">Delete</string>
    <string name="num_4" translatable="false">4</string>
    <string name="num_5" translatable="false">5</string>
    <string name="num_6" translatable="false">6</string>
    <string name="num_p" translatable="false">.</string>
    <string name="num_7" translatable="false">7</string>
    <string name="num_8" translatable="false">8</string>
    <string name="num_9" translatable="false">9</string>
    <string name="num_0" translatable="false">0</string>
    <string name="help">Help</string>
    <string name="no_ver">No Detected</string>
    <string name="device">Device</string>
    <string name="gps_mode">Use GPS</string>
    <string name="hw_conf_lable">HW Config</string>
    <string name="ptt_set">PTT Button</string>
    <string-array name="scram">
        <item>Off</item>
        <item>1: 2725 Hz</item>
        <item>2: 2825 Hz</item>
        <item>3: 2925 Hz</item>
        <item>4: 3025 Hz</item>
        <item>5: 3125 Hz</item>
        <item>6: 3225 Hz</item>
        <item>7: 3325 Hz</item>
        <item>8: 2625 Hz</item>
    </string-array>
</resources>