<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:clickable="false">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_weight="1">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/freq_prew"
            android:src="@android:drawable/ic_media_rew"
            android:layout_gravity="right|top"
            android:contentDescription="@string/freq_prew"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/freq"
            android:enabled="true"
            android:layout_marginTop="5dp"
            android:textSize="32sp"
            android:layout_weight="1"
            android:text="@string/freq_def"
            android:gravity="center_vertical|center_horizontal"
            android:inputType="numberDecimal"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:hint="@string/freq"
            android:textStyle="bold"
            android:typeface="monospace"
            android:maxLength="8"
            android:cursorVisible="true"
            android:layout_gravity="center" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/freq_next"
            android:src="@android:drawable/ic_media_ff"
            android:layout_gravity="left|top"
            android:contentDescription="@string/freq_next"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/rxctcss_label"
                    android:id="@+id/rxctcss_label"
                    android:singleLine="true"
                    android:textStyle="bold"
                    android:layout_margin="5dp"
                    android:gravity="center_vertical|right" />

                <Spinner
                    android:layout_width="120dp"
                    android:layout_height="45dp"
                    android:id="@+id/rxctcss"
                    android:entries="@array/ctcss"
                    android:focusableInTouchMode="false"
                    android:spinnerMode="dropdown"
                    android:minHeight="40dp"
                    android:layout_gravity="center_vertical|left" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/txctcss_label"
                    android:id="@+id/txctcss_label"
                    android:textStyle="bold"
                    android:layout_margin="5dp"
                    android:gravity="center_vertical|right" />

                <Spinner
                    android:layout_width="120dp"
                    android:layout_height="45dp"
                    android:id="@+id/txctcss"
                    android:minHeight="40dp"
                    android:focusable="false"
                    android:entries="@array/ctcss"
                    android:spinnerMode="dropdown"
                    android:layout_gravity="center_vertical|left" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/sq_label"
                android:id="@+id/sq_label"
                android:textStyle="bold"
                android:singleLine="true"
                android:layout_margin="5dp"
                android:gravity="center_vertical|right"
                android:layout_weight="27.16" />

            <Spinner
                android:layout_width="90dp"
                android:layout_height="45dp"
                android:id="@+id/sq"
                android:spinnerMode="dropdown"
                android:entries="@array/sq"
                android:minHeight="40dp"
                android:layout_gravity="center_vertical|left" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sound_src"
            android:src="@android:drawable/ic_lock_silent_mode_off"
            android:contentDescription="@string/sound" />

        <SeekBar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/volume"
            android:layout_margin="10dp"
            android:layout_weight="5"
            android:layout_gravity="center_vertical"
            android:max="7"
            android:progress="0"
            android:paddingEnd="10dp"
            android:paddingStart="10dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1000">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/num_1"
                android:id="@+id/num_1"
                android:textSize="30sp"
                android:layout_margin="4dp"
                android:layout_weight="1" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/num_2"
                android:id="@+id/num_2"
                android:textSize="30sp"
                android:layout_margin="4dp"
                android:layout_weight="1" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/num_3"
                android:id="@+id/num_3"
                android:textSize="30sp"
                android:layout_margin="4dp"
                android:layout_weight="1" />

            <ImageButton
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/del"
                android:src="@android:drawable/ic_input_delete"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:contentDescription="@string/del" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/num_4"
                android:id="@+id/num_4"
                android:textSize="30sp"
                android:layout_margin="4dp"
                android:layout_weight="1" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/num_5"
                android:id="@+id/num_5"
                android:textSize="30sp"
                android:layout_margin="4dp"
                android:layout_weight="1" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/num_6"
                android:id="@+id/num_6"
                android:textSize="30sp"
                android:layout_margin="4dp"
                android:layout_weight="1" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/num_p"
                android:id="@+id/num_p"
                android:textSize="30sp"
                android:layout_weight="1"
                android:layout_margin="4dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/num_7"
                android:id="@+id/num_7"
                android:textSize="30sp"
                android:layout_margin="4dp"
                android:layout_weight="1" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/num_8"
                android:id="@+id/num_8"
                android:textSize="30sp"
                android:layout_margin="4dp"
                android:layout_weight="1" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/num_9"
                android:id="@+id/num_9"
                android:textSize="30sp"
                android:layout_margin="4dp"
                android:layout_weight="1" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/num_0"
                android:id="@+id/num_0"
                android:textSize="30sp"
                android:layout_weight="1"
                android:layout_margin="4dp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>