<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:minWidth="300dp"
        android:longClickable="false"
        android:layout_margin="10dp">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/name"
                android:id="@+id/ch_name_label"
                android:layout_column="0"
                android:layout_weight="1"
                android:singleLine="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ch_name"
                android:layout_column="1"
                android:layout_weight="1000"
                android:singleLine="true" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/group_label"
                android:id="@+id/ch_group_label"
                android:layout_weight="1"
                android:layout_column="0" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:id="@+id/ch_group"
                android:layout_column="1"
                android:layout_weight="1000" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/rxfreq_label"
                android:id="@+id/ch_rxfreq_label"
                android:layout_column="0"
                android:layout_weight=".1"
                android:singleLine="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/ch_rxfreq"
                android:layout_column="1"
                android:layout_weight="1000"
                android:singleLine="true" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/txfreq_label"
                android:id="@+id/ch_txfreq_label"
                android:layout_column="0"
                android:layout_weight="1"
                android:singleLine="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/ch_txfreq"
                android:layout_column="1"
                android:layout_weight="1000"
                android:singleLine="true" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/rxctcss_label"
                android:id="@+id/ch_rxctcss_label"
                android:layout_column="0"
                android:layout_weight="1"
                android:singleLine="true" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ch_rxctcss"
                android:entries="@array/ctcss"
                android:layout_column="1"
                android:layout_weight="1000" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/txctcss_label"
                android:id="@+id/ch_txctcss_label"
                android:singleLine="true"
                android:layout_column="0"
                android:layout_weight="1" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ch_txctcss"
                android:entries="@array/ctcss"
                android:layout_column="1"
                android:layout_weight="1000" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/sq_label"
                android:id="@+id/ch_sq_label"
                android:layout_column="0"
                android:layout_weight="1"
                android:singleLine="false" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ch_sq"
                android:entries="@array/sq"
                android:layout_column="1"
                android:layout_weight="1000" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/scan"
                android:id="@+id/ch_scan_label"
                android:singleLine="false"
                android:layout_weight="1"
                android:layout_column="0" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ch_scan"
                android:singleLine="true"
                android:layout_weight="1000"
                android:layout_column="1"
                android:checked="true" />
        </TableRow>
    </TableLayout>

</LinearLayout>